--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ a:hover {
   font-size: 20px;
 }
 
+.not-implemented {
+  cursor: no-drop !important;
+}
+
 header {
   display: block;
   height: 70px;
@@ -237,6 +241,7 @@ header a.current {
   padding-left: 10px;
 }
 
+/*
 .phone .content .row.not-implemented {
   position: relative;
 }
@@ -251,6 +256,7 @@ header a.current {
   background-color: #333;
   opacity: 0.7;
 }
+*/
 
 .phone .content .row .toggle {
   content: "";
