--- a/css/style.css
+++ b/css/style.css
@@ -427,4 +427,10 @@ header a.current {
   background-repeat: no-repeat;
 }
 
-
+.chrome-message {
+  color: rgb(192, 21, 21);
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 30px;
+}
